syntax = "proto3";
package wind.Entities.Protobuf;
option csharp_namespace = "wind.Entities.Protobuf";
option optimize_for = LITE_RUNTIME;//SPEED;

// 预定义
message UnitSettingsProtobuf{
  string Name=1;
  string Description=2;
  int32 Type=3;
  string AbsoluteExecutePath=4;
  string AbsoluteWorkDirectory=5;
  string Arguments=6;
  bool AutoStart=7;
  int32 AutoStartDelay=8;
  bool RestartWhenException=9;
  bool MonitorPerformanceUsage=10;
  bool MonitorNetworkUsage=11;
}
message ProcessProtobuf{
  int32 Id=1;
  int64 StartTime=2;
}
message UnitPerformanceCounterProtobuf{
  float CPU=1;
  float RAM=2;
}
message UnitNetworkCounterProtobuf{
  int64 TotalSent=1;
  int64 TotalReceived=2;
  int64 SendSpeed=3;
  int64 ReceiveSpeed=4;
}
message UnitProtobuf{
  string Key=1;
  int32 State=2;
  string SettingsFilePath=3;
  UnitSettingsProtobuf SettingsProtobuf=4;
  UnitSettingsProtobuf RunningSettingsProtobuf=5;
  ProcessProtobuf ProcessProtobuf=6;
  UnitPerformanceCounterProtobuf PerformanceCounterProtobuf=7;
  UnitNetworkCounterProtobuf NetworkCounterProtobuf=8;
}
message DaemonProtobuf{
  string Name=1;
  string Description=2;
  string AbsoluteExecutePath=3;
  string AbsoluteWorkDirectory=4;
  ProcessProtobuf ProcessProtobuf=5;
  UnitPerformanceCounterProtobuf PerformanceCounterProtobuf=6;
  UnitNetworkCounterProtobuf NetworkCounterProtobuf=7;
}

// https://developers.google.com/protocol-buffers/docs/proto3?hl=zh-cn#simple
// https://www.npmjs.com/package/google-protobuf

// 测试包
message PacketTestProtobuf{
  int32 Type=1;
}

// windctl status unitKey
message StatusRequestProtobuf{
  int32 Type=1;//1001
  string UnitKey=2;
}
message StatusResponseProtobuf{
  int32 Type=1;//2001
  string UnitKey=2;
  bool Executed=3;
  string NoExecuteMessage=4;
  UnitProtobuf UnitProtobuf=5;
}
// windctl start unitKey
message StartRequestProtobuf{
  int32 Type=1;//1002
  string UnitKey=2;
}
message StartResponseProtobuf{
  int32 Type=1;//2002
  string UnitKey=2;
  bool Executed=3;
  string NoExecuteMessage=4;
}
// windctl stop unitKey
message StopRequestProtobuf{
  int32 Type=1;//1003
  string UnitKey=2;
}
message StopResponseProtobuf{
  int32 Type=1;//2003
  string UnitKey=2;
  bool Executed=3;
  string NoExecuteMessage=4;
}
// windctl restart unitKey
message RestartRequestProtobuf{
  int32 Type=1;//1004
  string UnitKey=2;
}
message RestartResponseProtobuf{
  int32 Type=1;//2004
  string UnitKey=2;
  bool Executed=3;
  string NoExecuteMessage=4;
}
// windctl load unitKey
message LoadRequestProtobuf{
  int32 Type=1;//1005
  string UnitKey=2;
}
message LoadResponseProtobuf{
  int32 Type=1;//2005
  string UnitKey=2;
  bool Executed=3;
  string NoExecuteMessage=4;
}
// windctl remove unitKey
message RemoveRequestProtobuf{
  int32 Type=1;//1006
  string UnitKey=2;
}
message RemoveResponseProtobuf{
  int32 Type=1;//2006
  string UnitKey=2;
  bool Executed=3;
  string NoExecuteMessage=4;
}

// windctl status-all
message StatusAllRequestProtobuf{
  int32 Type=1;//1101
}
message StatusAllResponseProtobuf{
  int32 Type=1;//2101
  repeated UnitProtobuf UnitProtobufArray=2;
}
// windctl start-all
message StartAllRequestProtobuf{
  int32 Type=1;//1102
}
message StartAllResponseProtobuf{
  int32 Type=1;//2102
}
// windctl stop-all
message StopAllRequestProtobuf{
  int32 Type=1;//1103
}
message StopAllResponseProtobuf{
  int32 Type=1;//2103
}
// windctl restart-all
message RestartAllRequestProtobuf{
  int32 Type=1;//1104
}
message RestartAllResponseProtobuf{
  int32 Type=1;//2104
}
// windctl load-all
message LoadAllRequestProtobuf{
  int32 Type=1;//1105
}
message LoadAllResponseProtobuf{
  int32 Type=1;//2105
}
// windctl remove-all
message RemoveAllRequestProtobuf{
  int32 Type=1;//1106
}
message RemoveAllResponseProtobuf{
  int32 Type=1;//2106
}

// windctl daemon-version
message DaemonVersionRequestProtobuf{
  int32 Type=1;//1200
}
message DaemonVersionResponseProtobuf{
  int32 Type=1;//2200
  int32 MajorVersion=2;
  int32 MinorVersion=3;
  int32 BuildVersion=4;
  int32 RevisionVersion=5;
}
// windctl daemon-status
message DaemonStatusRequestProtobuf{
  int32 Type=1;//1201
}
message DaemonStatusResponseProtobuf{
  int32 Type=1;//2201
  DaemonProtobuf DaemonProtobuf=2;
}
// windctl daemon-shutdown
message DaemonShutdownRequestProtobuf{
  int32 Type=1;//1299
}
message DaemonShutdownResponseProtobuf{
  int32 Type=1;//2299
}